@@ -1,3 +1,4 @@
+	* fixed bug in metadata extensions combined with encryption
 	* refactored socket reading code to not use async. operations unnecessarily
 	* some timer optimizations
 	* removed the reuse-address flag on the listen socket
